Fix button and input overflow for small width screens

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ button:hover {
 }
 
 .banner button {
-  width: 55px;
+  width: min(15vw, 55px);
 }
 
 .submit {
@@ -55,6 +55,7 @@ button:hover {
 
 .word-input {
   height: 32px;
+  width: min(50vw, 180px);
   box-sizing: border-box;
   background-color: #e7ecf7;
   font-size: 16px;
@@ -110,8 +111,9 @@ button:hover {
 }
 
 .response button {
-  width: min(50px, 10vw);
-  height: min(50px, 10vw);
+  width: min(50px, 8vw);
+  height: min(50px, 8vw);
+  font-size: min(2.2vw, 20px);
   color: white;
   margin: 10px 0 10px 0;
 }
